if HAVE_GUILE
 bin_SCRIPTS = gnunet-download-manager.scm
endif

EXTRA_DIST = \
 gnunet-download-manager.scm \
 gnunet.user \
 gnunet.root \
 autoinstall \
 initgnunet \
 visualize_stats.sh \
 gnmessage.sh \
 junkinsert.sh \
 junklookup.sh \
 namespacehelper.sh \
 report.sh \
 OSX/GNUnet \
 OSX/GNUnet-config \
 OSX/GNUnet-funcs \
 OSX/GNUnet.icns \
 OSX/History \
 OSX/Info.plist \
 OSX/Makefile \
 OSX/README \
 OSX/TODO \
 OSX/build_app \
 OSX/gnunet-gtk \
 OSX/gnunet-peer-info \
 OSX/gnunetd \
 OSX/gnunetmac-nox.txt \
 OSX/gnunetmac.txt 

